syntax = "proto3";

//import "google/protobuf/wrappers.proto";
 
option csharp_namespace = "GrpcTestService.Contracts";

package GrpcAdapter;

service AddTransactionService {
  rpc AddTransactionRpc (AddTransaction) returns (Transaction);
}
//work with List<T>, accepts IEnumerable in strings
message AddTransaction {
  int32 id=1;
  string addProductsInCartDto=2;
  string addCouponsDto=3;
  //bytes  
}

message Transaction{
	int32 id=1;
    int32 userId=2;
    string user=3;
    string paymentDate=4;
    int64 finalPrice=5;
    string coupons=6;
    repeated string productsInCart=7;
}

message GetTransactions {
  string message = 1;
}